syntax = "proto3";

package zksync.config;

message FriProofCompressor {
    optional uint32 compression_mode = 1; // required; u8
    optional uint32 prometheus_listener_port = 2; // required; u16
    optional string prometheus_pushgateway_url = 3; // required
    optional uint64 prometheus_push_interval_ms = 4; // optional; ms
    optional uint32 generation_timeout_in_secs = 5; // required; s
    optional uint32 max_attempts = 6; // required
    optional string universal_setup_path = 7; // required; fs path
    optional string universal_setup_download_url = 8; // required
    optional bool verify_wrapper_proof = 9; // required
}
